změna pozadí index stránky

--- a/index.html
+++ b/index.html
@@ -14,18 +14,19 @@
 
   </head>
   <body>
-	<div class="container">
-			<div class="jumbotron">
+			
+	<div>
+			
+			<div class="jumbotron zarovnani pozadi">
+					
 					<h1 class="display-4 nadpis">JÍDELNÍČEK</h1>
 					<p class="lead">Také si vždy lámete hlavu nad tím, co budete dnes vařit?</p>
 					<hr class="my-4">
 					<p>Pojďte si s námi vytvořit jídelníček a nákupní seznam na příští týden a máte o starost méně!</p>
-					<a class="btn btn-primary btn-lg" href="#" role="button">Generuj recepty!</a>
+					<a class="btn btn-success" href="#" role="button">Generuj recepty!</a>
 				</div>
 
-
-
-<!--<a href="jidelnicek.html"><img src="cooking.jpg" alt=""></a>//-->
+				<!-- <a href="index.html"><img src="cooking.jpg" alt="" class="pozadi">></a>//-->
 
 	</body>
 </html>
