--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
 			<div class="jumbotron zarovnani pozadi">
 					
 					<h1 class="display-4 nadpis">JÍDELNÍČEK</h1>
-					<p class="lead">Také si vždy lámete hlavu nad tím, co budete dnes vařit?</p>
+					<p class="lead paragraf1a2">Také si vždy lámete hlavu nad tím, co budete dnes vařit?</p>
 					<hr class="my-4">
-					<p>Pojďte si s námi vytvořit jídelníček a nákupní seznam na příští týden a máte o starost méně!</p>
-					<a class="btn btn-success" href="#" role="button">Generuj recepty!</a>
+					<p class="paragraf1a2">Pojďte si s námi vytvořit jídelníček a nákupní seznam na příští týden a máte o starost méně!</p>
+					<br>
+					<a class="btn btn-success generuj" href="#" role="button">Generuj recepty!</a>
 				</div>
 
 				<!-- <a href="index.html"><img src="cooking.jpg" alt="" class="pozadi">></a>//-->
